# Immanuel-MCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  compact_serializer.py  immanuel_server.py  pyproject.toml  refactor_codebase.py  test_immanuel_server.py
docs/: BUG_FIXES_2025-12-22.md  BUG_REFERENCE.md  FIX_SUMMARY.md  FULL_ENDPOINT_DIAGNOSIS.md  MCP_TROUBLESHOOTING_GUIDE.md  MODULARIZATION_COMPLETE.md  PHASE2_FIXES_2025-12-22.md  UPDATES.md
immanuel_mcp/: __init__.py  __main__.py  app.py  constants.py  server.py
scripts/: compact_serializer.py
test_results/: configure_immanuel_settings_test_results.json  create_cache_key_test_results.json  generate_compact_natal_chart_test_results.json  generate_compact_progressed_chart_test_results.json  generate_natal_chart_test_results.json  generate_solar_return_chart_test_results.json  get_error_suggestion_test_results.json  get_planetary_positions_test_results.json  handle_chart_error_test_results.json  parse_coordinate_test_results.json  validate_inputs_test_results.json
tests/: check_constants.py  check_immanuel_charts.py  check_mcp_tools.py  check_moon_attrs.py  check_settings.py  debug_north_node.py  test_all_fixes.py  test_audit_regressions.py  test_compact_structure.py  test_compact_transit.py  test_context_aware_interpretations.py  test_coordinate_parsing.py  test_deep_inspect.py  test_dignity_in_compact_mode.py  test_fix_verification.py  test_full_endpoint.py  test_full_endpoint_debug.py  test_immanuel_server.py  test_inspect_full_response.py  test_issues.py  test_json_compatibility.py  test_lifecycle.py  test_lifecycle_fixes.py  test_lunar_return.py  test_mcp_registration.py  test_objects.py  (+19 more)
(+31 files in other folders)
