[project]
name = "immanuel-mcp-server"
version = "0.1.0"
description = "MCP server for the Immanuel Python astrology library"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "immanuel",
    "tzdata>=2025.2",
]

[project.scripts]
immanuel-mcp = "immanuel_server:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "immanuel_server.py",
]
