[project]
name = "immanuel-mcp-server"
version = "0.1.0"
description = "MCP server for the Immanuel Python astrology library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["astrology", "mcp", "immanuel", "natal-chart", "horoscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]",
    "immanuel",
    "tzdata>=2025.2",
]

[project.urls]
Homepage = "https://github.com/Jasperb3/Immanuel-MCP"
Repository = "https://github.com/Jasperb3/Immanuel-MCP"

[project.scripts]
immanuel-mcp = "immanuel_server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "immanuel_server.py",
    "compact_serializer.py",
]
